add login & logout

--- a/web/src/app.css
+++ b/web/src/app.css
@@ -1,3 +1,7 @@
 @import 'tailwindcss';
 @plugin '@tailwindcss/forms';
 @plugin '@tailwindcss/typography';
+
+.btn {
+    @apply inline-flex items-center justify-center px-6 py-3 rounded-xl bg-[#f6ad55] text-[#2e2e2e] font-semibold text-base hover:bg-[#f7b766] hover:shadow-md active:scale-95 focus:outline-none focus:ring-2 focus:ring-[#f6ad55] transition-all duration-200;
+}
